--- a/src/app/components/cabbingo-board/cabbingo-board.html
+++ b/src/app/components/cabbingo-board/cabbingo-board.html
@@ -3,24 +3,30 @@
     <div class="content">
         <div class="row teams">
             <button class="button btn col-md-5" (click)="switchTeam(teamEnum.TeamDumb)"
-                [ngClass]=" currentTeam === teamEnum.TeamDumb ? 'btn btn-outline-success': ''">Team 1</button>
+                [ngClass]=" currentTeam === teamEnum.TeamDumb ? 'btn selected-team': ''">Team 1</button>
             <button class="button btn col-md-5" (click)="switchTeam(teamEnum.TeamWon)"
-                [ngClass]=" currentTeam === teamEnum.TeamWon ? 'btn btn-outline-success': ''">Team 2</button>
+                [ngClass]=" currentTeam === teamEnum.TeamWon ? 'btn selected-team': ''">Team 2</button>
         </div>
         <div class="row board">
             <div class="tiles column col-auto">
                 @for(row of board; track row){
-                <div class="row tile-row">
+                <div class="row tile-row gap-3">
                     @for(tile of row; track tile){
-                    <button class="btn tile" (click)="onTileClick(tile)" [class.completed]="tile.completed">
-                        <p class="tile-text">{{ tile.title }}</p>
-                        <img class="tile-image" [src]="tile.src" [alt]="tile.alt || ''" />
-                        <div class="progress" style="height: 10px; margin-top:80px;">
-                            <div class="progress-bar bg-success" role="progressbar"
-                                [style.width.%]="(tile.itemsObtained / tile.itemsRequired) * 100"
-                                [attr.aria-valuenow]="tile.itemsObtained" aria-valuemin="0"
-                                [attr.aria-valuemax]="tile.itemsRequired">/////////////////////
-                            </div>
+                    <button class="btn tile" (click)="onTileClick(tile)" [ngClass]="{
+                        'tile-selected': tile === selectedTile , 'tile-completed': tile.itemsObtained >= tile.itemsRequired
+                    }">
+                        <div class="d-flex flex-column">
+                            @if(!(tile.itemsObtained >= tile.itemsRequired)){
+                            <div class="progress" style="height: 5px;">
+                                <div class="progress-bar bg-success" role="progressbar"
+                                    [style.width.%]="(tile.itemsObtained / tile.itemsRequired) * 100"
+                                    [attr.aria-valuenow]="tile.itemsObtained" aria-valuemin="0"
+                                    [attr.aria-valuemax]="tile.itemsRequired">
+                                    <div style="width: 110px;"></div>
+                                </div>
+                            </div>}
+                            <img class="tile-image p-1" [src]="tile.src" [alt]="tile.alt" />
+                            <p class="tile-text">{{ tile.title }}</p>
                         </div>
                     </button>
                     }
@@ -28,18 +34,25 @@
                 }
             </div>
             <div class="infoArea col-auto">
-                <div class="infobox d-flex flex-column justify-content-between align-items-center">
+                <div class="infobox d-flex flex-column justify-content-center align-items-center">
                     @if(selectedTile){
-                    <div class="mt-5">{{selectedTile.description}}</div>
+                    <div>{{selectedTile.description}}</div>
                     <div><img class="bossImage" [src]="selectedTile.bossSrc" [alt]="selectedTile.alt || ''" /></div>
-                    <div class="mt-2">{{selectedTile.itemsObtained}} / {{selectedTile.itemsRequired}} Obtained</div>
+                    <div class="d-flex flex-column align-items-center">
+                        <div class="d-flex flex-row">Points: <p class="mx-2" style="color:rgb(8, 255, 8);">
+                                {{selectedTile.points}}</p>
+                        </div>
+                        <div>{{selectedTile.itemsObtained}} / {{selectedTile.itemsRequired}} Obtained </div>
+                    </div>
                     }
                     @else{<p>Click on a tile!</p>}
                 </div>
                 <div class="infobox">
                     <p>Da Rulez</p>
                 </div>
-                <div class="button">Complete Tile</div>
+                <div>
+                    <button class="btn button disabled">Total points: {{getTotalPoints()}}</button>
+                </div>
             </div>
         </div>
     </div>
