--- a/src/styles.css
+++ b/src/styles.css
@@ -22,9 +22,9 @@
 .page-wrap {
   background: url(https://www.runescape.com/img/rsp777/bg2.jpg) repeat-y center top;
   margin: 0 auto;
-  overflow-y: hidden;
+  overflow: auto;
   padding: 0 50px;
-  padding-bottom: 75px;
+  padding-bottom: 19px;
   width: 1198px;
   background-size: contain;
 }
@@ -40,8 +40,7 @@ body {
 }
 
 .banner {
-  /* background: url(https://www.runescape.com/img/rsp777/title2/rslogo3.png) no-repeat center; */
-  background: url(assets/Untitled_Artwork2.png) no-repeat center;
+  background: url(assets/Logo.png) no-repeat center;
   background-size: contain;
   display: block;
   height: 190px;
@@ -101,30 +100,34 @@ body {
   flex-wrap: nowrap;
   justify-content: flex-end;
   margin-top: 30px;
+  max-height: 580px;
+  height: 580px;
 }
 
 /* UI elements end */
 
 /* Tiles */
 
-.tile-text {
-  color: #FF9933;
-  position: absolute;
-  font-size: 16px;
-  height: 16px;
-  white-space: normal;
+.bossImage {
+  height: 125px;
 }
 
-.bossImage {
-  width: 125px;
-  height: 100px;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: top;
-  display: flex;
-  align-content: center;
-  align-items: center;
-  text-align: center;
+.tile-image {
+  height: 55px;
+  object-fit: contain;
+  filter: drop-shadow(6px 6px 2mm rgb(0, 0, 0));
+  z-index: 0
+}
+
+.tile-text {
+  color: #FF9933;
+  font-size: 16px;
+  height: 16px;
+  max-width: 120px;
+  white-space: wrap;
+  word-break: break-word;
+  z-index: 1;
+  line-height: normal;
 }
 
 .tile {
@@ -132,7 +135,6 @@ body {
   height: 100px;
   flex-direction: column;
   flex-wrap: nowrap;
-  justify-content: top;
   display: flex;
   align-content: center;
   align-items: center;
@@ -140,109 +142,24 @@ body {
   background: url(assets/tile-background.png) no-repeat top center;
 }
 
-.tile-image,
-.tile-image-1-item,
-.tile-image-2-items1,
-.tile-image-2-items2,
-.tile-image-3-items1,
-.tile-image-3-items2,
-.tile-image-3-items3,
-.tile-image-4-items1,
-.tile-image-4-items2,
-.tile-image-4-items3,
-.tile-image-4-items4,
-.tile-image-5-items1,
-.tile-image-5-items2,
-.tile-image-5-items3,
-.tile-image-5-items4,
-.tile-image-5-items5 {
-  margin-top: 25px;
-  position: absolute;
-  height: 60px;
-  object-fit: contain;
-  filter: drop-shadow(6px 6px 2mm rgb(0, 0, 0)); 
-  z-index:-10
+.tile:hover {
+  filter: drop-shadow(0px 0px .5mm gold);
 }
 
-/* 2 items */
-.tile-image-2-items1 {
-  margin-left: -28px;
-  z-index: 2;
+.tile-selected {
+  border: gold 2px solid;
 }
 
-.tile-image-2-items2 {
-  margin-left: 28px;
-  z-index: 1;
-}
-
-/* 3 items */
-.tile-image-3-items1 {
-  margin-left: -70px;
-  z-index: 3;
-}
-
-.tile-image-3-items2 {
-  margin-left: 0px;
-  z-index: 2;
-}
-
-.tile-image-3-items3 {
-  margin-left: 70px;
-  z-index: 1;
-}
-
-/* 4 items */
-.tile-image-4-items1 {
-  margin-left: -62.5px;
-  z-index: 4;
-}
-
-.tile-image-4-items2 {
-  margin-left: -31.25px;
-  z-index: 3;
-}
-
-.tile-image-4-items3 {
-  margin-left: 31.25px;
-  z-index: 2;
-}
-
-.tile-image-4-items4 {
-  margin-left: 62.5px;
-  z-index: 1;
-}
-
-/* 5 items */
-.tile-image-5-items1 {
-  margin-left: -50px;
-  z-index: 5;
-}
-
-.tile-image-5-items2 {
-  margin-left: -25px;
-  z-index: 4;
-}
-
-.tile-image-5-items3 {
-  margin-left: 0px;
-  z-index: 3;
-}
-
-.tile-image-5-items4 {
-  margin-left: 25px;
-  z-index: 2;
-}
-
-.tile-image-5-items5 {
-  margin-left: 50px;
-  z-index: 1;
+.tile-completed {
+  background: url(assets/tile-background-completed.png) no-repeat top center;
 }
 
 /* Tile orientation */
 .tile-row {
-  justify-content: space-evenly;
+  justify-content: start;
   padding-top: 6px;
   padding-bottom: 6px;
+  padding-left: 8px;
 }
 
 .tiles {
@@ -304,5 +221,9 @@ body {
 }
 
 .btn:hover {
-  color: #198754 !important;
+  color: gold !important;
+}
+
+.selected-team {
+  filter: drop-shadow(0px 0px 1mm gold);
 }
