--- a/src/app/components/cabbingo-board/cabbingo-board.html
+++ b/src/app/components/cabbingo-board/cabbingo-board.html
@@ -1,57 +1,69 @@
-<div class="page-wrap">
-    <div class="banner"></div>
-    <div class="content">
-        <div class="row teams">
-            <button class="button btn col-md-5" (click)="switchTeam(teamEnum.Team1)"
-                [ngClass]=" currentTeam === teamEnum.Team1 ? 'btn selected-team': ''">Team 1</button>
-            <button class="button btn col-md-5" (click)="switchTeam(teamEnum.Team2)"
-                [ngClass]=" currentTeam === teamEnum.Team2 ? 'btn selected-team': ''">Team 2</button>
-        </div>
-        <div class="row board">
-            <div class="tiles column col-auto">
-                @for(row of board; track row){
-                <div class="row tile-row gap-3">
-                    @for(tile of row; track tile){
-                    <button class="btn tile" (click)="onTileClick(tile)" [ngClass]="{
+<div class="page-wrap ">
+     <div class="banner d-flex justify-content-end"><a class="btn button h-25 me-4" [routerLink]="['/edit-board']">Log in as captain</a></div>
+    <div class="d-flex justify-content-center">
+        <div class="osrs-border-thick p-4">
+            <div class="row teams mb-2">
+                <button class="button btn col-md-5" (click)="switchTeam(teamEnum.Team1)"
+                    [ngClass]=" currentTeam === teamEnum.Team1 ? 'btn selected-team': ''">Team 1</button>
+                <button class="button btn col-md-5" (click)="switchTeam(teamEnum.Team2)"
+                    [ngClass]=" currentTeam === teamEnum.Team2 ? 'btn selected-team': ''">Team 2</button>
+            </div>
+            <div class="gap-2 d-flex justify-content-center">
+                <div class="tiles osrs-border column col-auto">
+                    <div class="d-flex align-items-center gap-2">
+                        <div class="d-flex align-items-center mx-2 me-0 row-tile">.</div>
+                        @for(column of [].constructor(boardSize); track
+                        column; let i = $index){
+                        <div class="column-tile">Column {{i + 1}}</div>}
+                    </div>
+                    @for(row of board; track row; let rowIndex = $index){
+                    <div class="d-flex justify-content-left px-2 py-1 gap-2">
+                        <div class="d-flex align-items-center row-tile">Row {{rowIndex + 1}}</div>
+                        @for(tile of row; track tile){
+                        <button class="btn tile" (click)="onTileClick(tile)" [ngClass]="{
                         'tile-selected': tile === selectedTile , 'tile-completed': tile.itemsObtained >= tile.itemsRequired
                     }">
-                        <div class="d-flex flex-column">
-                            @if(!(tile.itemsObtained >= tile.itemsRequired)){
-                            <div class="progress" style="height: 5px;">
-                                <div class="progress-bar bg-success" role="progressbar"
-                                    [style.width.%]="(tile.itemsObtained / tile.itemsRequired) * 100"
-                                    [attr.aria-valuenow]="tile.itemsObtained" aria-valuemin="0"
-                                    [attr.aria-valuemax]="tile.itemsRequired">
-                                    <div style="width: 110px;"></div>
-                                </div>
-                            </div>}
-                            <img class="tile-image p-1" [src]="tile.src" [alt]="tile.alt" />
-                            <p class="tile-text">{{ tile.title }}</p>
-                        </div>
-                    </button>
-                    }
-                </div>
-                }
-            </div>
-            <div class="infoArea col-auto">
-                <div class="infobox d-flex flex-column justify-content-center align-items-center">
-                    @if(selectedTile){
-                    <div>{{selectedTile.description}}</div>
-                    <div><img class="bossImage" [src]="selectedTile.bossSrc" [alt]="selectedTile.alt || ''" /></div>
-                    <div class="d-flex flex-column align-items-center">
-                        <div class="d-flex flex-row">Points: <p class="mx-2" style="color:rgb(8, 255, 8);">
-                                {{selectedTile.points}}</p>
-                        </div>
-                        <div>{{selectedTile.itemsObtained}} / {{selectedTile.itemsRequired}} Obtained </div>
+                            <div class="d-flex flex-column">
+                                @if(!(tile.itemsObtained >= tile.itemsRequired)){
+                                <div class="progress" style="height: 5px;">
+                                    <div class="progress-bar bg-success" role="progressbar"
+                                        [style.width.%]="(tile.itemsObtained / tile.itemsRequired) * 100"
+                                        [attr.aria-valuenow]="tile.itemsObtained" aria-valuemin="0"
+                                        [attr.aria-valuemax]="tile.itemsRequired">
+                                        <div style="width: 110px;"></div>
+                                    </div>
+                                </div>}
+                                <img class="tile-image p-1" [src]="tile.src" [alt]="tile.alt" />
+                                <p class="tile-text">{{ tile.title }}</p>
+                            </div>
+                        </button>
+                        }
                     </div>
                     }
-                    @else{<p>Click on a tile!</p>}
                 </div>
-                <div class="infobox">
-                    <p>Da Rulez</p>
-                </div>
-                <div>
-                    <button class="btn button disabled">Total points: {{getTotalPoints()}}</button>
+                <div class="infoArea col-auto">
+                    <div class="infobox osrs-border d-flex flex-column justify-content-center align-items-center">
+                        @if(selectedTile){
+                        <div>{{selectedTile.description}}</div>
+                        <div><img class="bossImage" [src]="selectedTile.bossSrc" [alt]="selectedTile.alt || ''" /></div>
+                        <div class="d-flex flex-column align-items-center">
+                            <div class="d-flex flex-row">Points: <p class="mx-2" style="color:rgb(8, 255, 8);">
+                                    {{selectedTile.points}}</p>
+                            </div>
+                            <div>{{selectedTile.itemsObtained}} / {{selectedTile.itemsRequired}} Obtained </div>
+                        </div>
+                        }
+                        @else{<p>Click on a tile!</p>}
+                    </div>
+                    <div class="infobox osrs-border">
+                        <p>Da Rulez</p>
+                        @for(rule of selectedTile?.rules; track rule; let i = $index){
+                        {{i+1}}. {{rule}}<br>
+                        }
+                    </div>
+                    <div>
+                        <button class="btn button disabled">Total points: {{getTotalPoints()}}</button>
+                    </div>
                 </div>
             </div>
         </div>
