--- a/src/app/components/cabbingo-edit-board/cabbingo-edit-board.html
+++ b/src/app/components/cabbingo-edit-board/cabbingo-edit-board.html
@@ -39,7 +39,7 @@
           <p>This is where you can edit your board!</p>
             <button class="btn custom-btn" [routerLink]="['']">Return to board</button>
           </div>
-          <div style="max-height: 600px; overflow: auto;" class="mt-2">
+          <div style="max-height: 600px;" class="mt-2 overflow-auto">
             <table class="table osrs-table table-bordered">
               <thead>
                 <tr class="sticky-top" style="top: -1px; box-shadow: black 0px 1px 0px 0px;">
