--- a/src/app/components/cabbingo-board/cabbingo-board.html
+++ b/src/app/components/cabbingo-board/cabbingo-board.html
@@ -1,7 +1,8 @@
 <div class="page-wrap ">
-     <div class="banner d-flex justify-content-end"><a class="btn button h-25 me-4" [routerLink]="['/edit-board']">Log in as captain</a></div>
+    <a class="btn button position-fixed mt-1 end-0 top-0 me-5" [routerLink]="['/edit-board']">Log in as captain</a>
+    <div class="banner d-flex justify-content-end"></div>
     <div class="d-flex justify-content-center">
-        <div class="osrs-border-thick p-4">
+        <div class="osrs-border-thick px-4 py-2">
             <div class="row teams mb-2">
                 <button class="button btn col-md-5" (click)="switchTeam(teamEnum.Team1)"
                     [ngClass]=" currentTeam === teamEnum.Team1 ? 'btn selected-team': ''">Team 1</button>
@@ -20,10 +21,10 @@
                     <div class="d-flex justify-content-left px-2 py-1 gap-2 ">
                         <div class="d-flex align-items-center row-tile">Row {{rowIndex + 1}}</div>
                         @for(tile of row; track tile){
-                        <button class="btn tile" (click)="onTileClick(tile)" [ngClass]="{
+                        <button class="btn tile d-flex flex-column" (click)="onTileClick(tile)" [ngClass]="{
                         'tile-selected': tile === selectedTile , 'tile-completed': tile.itemsObtained >= tile.itemsRequired
                     }">
-                            <div class="d-flex flex-column">
+                            <div>
                                 @if(!(tile.itemsObtained >= tile.itemsRequired)){
                                 <div class="progress" style="height: 5px;">
                                     <div class="progress-bar bg-success" role="progressbar"
@@ -43,30 +44,32 @@
                 </div>
                 <div class="infoArea d-flex justify-content-between col-auto">
                     <div>
-                    <div class="infobox osrs-border d-flex flex-column justify-content-between align-items-center" style="min-height:300px;">
-                        @if(selectedTile){
-                        <div>{{selectedTile.description}}</div>
-                        <div><img class="bossImage" [src]="selectedTile.bossSrc" [alt]="selectedTile.alt || ''" /></div>
-                        <div class="d-flex flex-column align-items-center">
-                            <div class="d-flex flex-row pt-3">Points: <p class="mx-2" style="color:rgb(8, 255, 8);">
-                                    {{selectedTile.points}}</p>
+                        <div class="infobox osrs-border d-flex flex-column justify-content-between align-items-center"
+                            style="min-height:300px;">
+                            @if(selectedTile){
+                            <div>{{selectedTile.description}}</div>
+                            <div><img class="bossImage" [src]="selectedTile.bossSrc" [alt]="selectedTile.alt || ''" />
                             </div>
-                            <div>{{selectedTile.itemsObtained}} / {{selectedTile.itemsRequired}} Obtained </div>
+                            <div class="d-flex flex-column align-items-center">
+                                <div class="d-flex flex-row pt-3">Points: <p class="mx-2" style="color:rgb(8, 255, 8);">
+                                        {{selectedTile.points}}</p>
+                                </div>
+                                <div>{{selectedTile.itemsObtained}} / {{selectedTile.itemsRequired}} Obtained </div>
+                            </div>
+                            }
+                            @else{<p>Click on a tile!</p>}
                         </div>
-                        }
-                        @else{<p>Click on a tile!</p>}
-                    </div>
-                    <div class="infobox osrs-border">
-                        <p>Da Rulez</p>
-                        @for(rule of selectedTile?.rules; track rule; let i = $index){
-                        @if(!rule.includes('Excluded:')){
-                           {{rule}}<br>
-                        }
-                        @else{
+                        <div class="infobox osrs-border">
+                            <p>Da Rulez</p>
+                            @for(rule of selectedTile?.rules; track rule; let i = $index){
+                            @if(!rule.includes('Excluded:')){
+                            {{rule}}<br>
+                            }
+                            @else{
                             <strong style="text-decoration: underline;">{{rule}}</strong><br>
-                        }
-                        }
-                    </div>
+                            }
+                            }
+                        </div>
                     </div>
                     <div class="mt-2">
                         <button class="btn button disabled float-bottom">Total points: {{getTotalPoints()}}</button>
