--- a/src/app/components/cabbingo-board/cabbingo-board.html
+++ b/src/app/components/cabbingo-board/cabbingo-board.html
@@ -20,7 +20,8 @@
                         <div class="d-flex align-items-center mx-2 me-0 row-tile">.</div>
                         @for(column of [].constructor(boardSize); track i; let i = $index){
                         @if(getTotalPoints() > 0 && calculateColumnBonuses(i) > 0){
-                        <div class="d-flex justify-content-center gap-2 column-tile text-success">Column {{ i + 1 }} <i class="bi bi-check-circle-fill"></i></div>
+                        <div class="d-flex justify-content-center gap-2 column-tile text-success">Column {{ i + 1 }} <i
+                                class="bi bi-check-circle-fill"></i></div>
                         }
                         @else{
                         <div class="d-flex justify-content-center gap-2 column-tile">Column {{ i + 1 }}</div>
@@ -30,7 +31,8 @@
                     @for(row of board; track row; let rowIndex = $index){
                     <div class="d-flex justify-content-left px-2 py-1 gap-2">
                         @if(getTotalPoints() > 0 && calculateRowBonuses(rowIndex) > 0){
-                        <div class="d-flex align-items-center row-tile text-success">Row {{ rowIndex + 1 }} <i class="bi bi-check-circle-fill"></i></div>
+                        <div class="d-flex align-items-center row-tile text-success">Row {{ rowIndex + 1 }} <i
+                                class="bi bi-check-circle-fill"></i></div>
                         }
                         @else{
                         <div class="d-flex align-items-center row-tile">Row {{ rowIndex + 1 }}</div>
@@ -85,8 +87,21 @@
                         </div>
                         <div
                             class="d-flex flex-column infobox osrs-border-brighter justify-content-center align-items-center">
-                            <p style="color:#FF9933;">Da Rulez</p>
+                            <div class="d-flex d-row justify-content-center gap-2">
+                                <button class="btn row-tile" style="width:115px; height:40px;"
+                                    [ngClass]="{'rules-btn-selected': bingoRulesOpened, 'rules-btn': !bingoRulesOpened}"
+                                    (click)="bingoRulesOpened = true;">
+                                    <p style="color:#FF9933; width:auto">Bingo Rulez</p>
+                                </button>
+                                <button class="btn row-tile" style="width:115px; height:40px;"
+                                    [ngClass]="{'rules-btn-selected': !bingoRulesOpened, 'rules-btn': bingoRulesOpened}"
+                                    (click)="bingoRulesOpened = false;">
+                                    <p style="color:#FF9933; width:auto">Tile Rulez</p>
+                                </button>
+                            </div>
+
                             <div class="rulesbox custom-scrollbar overflow-y-scroll osrs-border-darker">
+                                @if(!bingoRulesOpened){
                                 @for(rule of selectedTile?.rules; track rule; let i = $index){
                                 @if(rule.includes('Excluded') || rule.includes('Allowed')){
                                 {{ rule }}
@@ -95,9 +110,18 @@
                                 } @else if(rule.includes('+')){
                                 <strong style="color: #0CD90D;">{{ rule.replace('+', '') }}</strong>
                                 } @else{
-                                 <strong style="color:#FF9933;">{{ rule }}</strong>
+                                <strong style="color:#FF9933;">{{ rule }}</strong>
                                 }
-                                <br />}
+                                <br />}}
+                                @else {
+                                <ul class="px-2">
+                                    <li>Multiple accounts are allowed, but only one can be logged in at once.</li>
+                                    <li>The EXP tile will only be counted for ONE account. If you are playing with multiple.</li>
+                                    <li>Complete a full row or column to earn a {{ rowBonus }} point bonus!</li>
+                                    <li>Tiles can be completed in any order.</li>
+                                    <li style="color:#0CD90D;">Good luck and have fun!</li>
+                                </ul>
+                            }
                             </div>
                         </div>
                     </div>
